--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eslint-config-prettier": "^3.4.0",
     "eslint-plugin-import": "^2.20.2",
     "lint-staged": "^9.5.0",
-    "prettier": "^1.19.1"
+    "prettier": "^2.0.4"
   },
   "eslintConfig": {
     "extends": [
@@ -48,8 +48,7 @@
     }
   },
   "prettier": {
-    "singleQuote": true,
-    "trailingComma": "all"
+    "singleQuote": true
   },
   "lint-staged": {
     "*.js": [
