--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "eslint-config-prettier": "^3.4.0",
     "eslint-plugin-import": "^2.20.2",
     "lint-staged": "^9.5.0",
-    "prettier": "^2.0.4"
+    "prettier": "^2.0.4",
+    "prettier-plugin-package": "^1.0.0"
   },
   "eslintConfig": {
     "extends": [
