Prettier package.json

--- a/package.json
+++ b/package.json
@@ -2,24 +2,27 @@
   "name": "strapi-provider-upload-ibm",
   "version": "1.0.2",
   "description": "IBM Cloud Object Storage provider for Strapi upload plugin",
+  "license": "Apache-2.0",
+  "repository": "github:IBMResearch/strapi-provider-upload-ibm",
+  "author": "IBM - Emerging Technology Experiences <etxservi@us.ibm.com>",
+  "homepage": "https://github.com/IBMResearch/strapi-provider-upload-ibm",
+  "engines": {
+    "node": ">=10.0.0",
+    "npm": ">=6.0.0"
+  },
+  "scripts": {
+    "deps": "depcheck --ignores='lint-staged,prettier,release-it'",
+    "format": "prettier --write '**/*.js'",
+    "lint": "npm run format && eslint .",
+    "precommit": "lint-staged",
+    "test": "npm run lint && npm run deps"
+  },
   "keywords": [
     "upload",
     "ibm",
     "strapi",
     "provider"
   ],
-  "author": "IBM - Emerging Technology Experiences <etxservi@us.ibm.com>",
-  "homepage": "https://github.com/IBMResearch/strapi-provider-upload-ibm",
-  "contributors": [
-    "https://github.com/IBMResearch/strapi-provider-upload-ibm/graphs/contributors"
-  ],
-  "scripts": {
-    "format": "prettier --write '**/*.js'",
-    "precommit": "lint-staged",
-    "lint": "npm run format && eslint .",
-    "deps": "depcheck --ignores='lint-staged,prettier,release-it'",
-    "test": "npm run lint && npm run deps"
-  },
   "dependencies": {
     "ibm-cos-sdk": "^1.6.0"
   },
@@ -48,9 +51,6 @@
       ]
     }
   },
-  "prettier": {
-    "singleQuote": true
-  },
   "lint-staged": {
     "*.js": [
       "eslint --fix",
@@ -58,19 +58,10 @@
       "git add"
     ]
   },
+  "prettier": {
+    "singleQuote": true
+  },
   "strapi": {
     "isProvider": true
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/IBMResearch/strapi-provider-upload-ibm.git"
-  },
-  "bugs": {
-    "url": "https://github.com/IBMResearch/strapi-provider-upload-ibm/issues"
-  },
-  "engines": {
-    "node": ">= 10.0.0",
-    "npm": ">= 6.0.0"
-  },
-  "license": "Apache-2.0"
+  }
 }
