Use files instead of npmignore

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "lint": "eslint \"**/*.js\"",
     "test": "npm run lint && npm run deps"
   },
+  "files": [
+    "index.js"
+  ],
   "keywords": [
     "upload",
     "ibm",
