--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "ibm-cos-sdk": "^1.6.0"
   },
   "devDependencies": {
-    "depcheck": "^0.9.2",
+    "depcheck": "^0.9.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.0",
     "husky": "^4.2.0",
-    "lint-staged": "^10.1.0",
-    "prettier": "2.0.5",
+    "lint-staged": "^10.2.0",
+    "prettier": "~2.0.0",
     "prettier-plugin-package": "^1.0.0"
   },
   "eslintConfig": {
